--- a/booking.html
+++ b/booking.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clinic Dashboard - Booking Table</title>
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="./img/dummy-conan.jpeg" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./dashboard.css" />
-
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <style>
       @media (min-width: 1024px) {
@@ -29,16 +25,6 @@
           max-width: none !important;
           margin: 0;
         }
-        .main-content {
-          width: 100%;
-        }
-      }
-
-      .status-filter {
-        margin: 15px 0;
-        display: flex;
-        align-items: center;
-        gap: 10px;
       }
 
       select.status-dropdown,
@@ -56,60 +42,63 @@
         border-color: #555;
       }
 
-      .table-card h3 {
-        margin-bottom: 10px;
-      }
-
       .save-indicator {
         font-size: 12px;
         color: green;
         display: none;
         margin-right: 5px;
       }
+
+      .sending-indicator {
+        color: #7c3aed;
+        font-size: 12px;
+        margin-right: 5px;
+        display: none;
+      }
+
+      .spinner {
+        display: inline-block;
+        width: 14px;
+        height: 14px;
+        border: 2px solid rgba(255, 255, 255, 0.3);
+        border-radius: 50%;
+        border-top-color: #fff;
+        animation: spin 1s ease-in-out infinite;
+      }
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
     </style>
   </head>
 
   <body>
     <div class="container">
-      <!-- SIDEBAR -->
       <aside class="sidebar" id="sidebar">
-        <div class="logo">
-          <span>CONAN DASHBOARD</span>
-        </div>
+        <div class="logo"><span>CONAN DASHBOARD</span></div>
         <nav class="menu">
-          <a href="dashboard.html">
-            <i class="fa-solid fa-gauge"></i>
-            لوحة القيادة
-          </a>
-
-          <a href="notifications.html">
-            <i class="fa-solid fa-bell"></i>
-            التنبيهات
-          </a>
-
-          <a href="analytics.html">
-            <i class="fa-solid fa-rocket"></i>
-            تحليلات
-          </a>
-
-          <a href="booking.html" class="active">
-            <i class="fa-solid fa-table"></i>
-            جدول الحجوزات
-          </a>
-
-          <a href="AIsettings.html">
-            <i class="fa-solid fa-robot"></i>
-            إعدادات الذكاء الاصطناعي
-          </a>
-
-          <a href="offers.html">
-            <i class="fa-solid fa-gift"></i>
-            إرسال العروض المخصصة
-          </a>
+          <a href="dashboard.html"
+            ><i class="fa-solid fa-gauge"></i> لوحة القيادة</a
+          >
+          <a href="notifications.html"
+            ><i class="fa-solid fa-bell"></i> التنبيهات</a
+          >
+          <a href="analytics.html"
+            ><i class="fa-solid fa-rocket"></i> تحليلات</a
+          >
+          <a href="booking.html" class="active"
+            ><i class="fa-solid fa-table"></i> جدول الحجوزات</a
+          >
+          <a href="AIsettings.html"
+            ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
+          >
+          <a href="offers.html"
+            ><i class="fa-solid fa-gift"></i> إرسال العروض المخصصة</a
+          >
         </nav>
       </aside>
 
-      <!-- MAIN CONTENT -->
       <main class="main-content" id="dashboardContent">
         <header class="header">
           <div class="header-left">
@@ -125,12 +114,10 @@
           </div>
         </header>
 
-        <!-- BOOKING TABLE -->
         <section class="dashboard-grid">
-          <div class="table-card" style="width: 100%">
+          <div class="table-card">
             <h3>جدول الحجوزات</h3>
 
-            <!-- STATUS FILTER -->
             <select id="statusFilter">
               <option value="all">الكل</option>
               <option value="Contacted">تم التواصل</option>
@@ -142,21 +129,11 @@
             <table id="tbl">
               <thead>
                 <tr>
-                  <th onclick="sortTable(0)">
-                    الاسم <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(1)">
-                    الهاتف <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(2)">
-                    الخدمة <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(3)">
-                    الموعد <i class="fas fa-sort"></i>
-                  </th>
-                  <th onclick="sortTable(4)">
-                    الوقت <i class="fas fa-sort"></i>
-                  </th>
+                  <th>الاسم</th>
+                  <th>الهاتف</th>
+                  <th>الخدمة</th>
+                  <th>الموعد</th>
+                  <th>الوقت</th>
                   <th>الحالة</th>
                 </tr>
               </thead>
@@ -170,7 +147,6 @@
     </div>
 
     <script>
-      // ======= SUPABASE CONNECTION =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
@@ -180,39 +156,75 @@
       let sortDirection = 1;
       const q = (s) => document.querySelector(s);
 
-      // ✅ LOAD BOOKINGS FROM SUPABASE
+      // ✅ Load bookings
       async function load() {
         const { data, error } = await supabase.from("bookings").select("*");
-
         if (error) {
           console.error("Error fetching bookings:", error);
           return;
         }
-
-        allData = data.map((b) => ({
-          ...b,
-          status: b.status || "Still",
-        }));
-
+        allData = data.map((b) => ({ ...b, status: b.status || "Still" }));
         renderTable(allData);
       }
 
-      // ✅ UPDATE STATUS IN SUPABASE
+      // ✅ Update status in Supabase
       async function updateStatus(id, newStatus) {
         const { error } = await supabase
           .from("bookings")
           .update({ status: newStatus })
           .eq("id", id);
-
         if (error) console.error("Error updating status:", error);
       }
 
-      // ✅ RENDER TABLE
-      function renderTable(d) {
+      // ✅ Send WhatsApp reminder
+      async function sendWhatsAppReminder(booking, idx) {
+        const indicator = document.getElementById(`sending-${idx}`);
+        indicator.style.display = "inline";
+
+        const payload = {
+          name: booking.name || "عميلنا الكريم",
+          phone: booking.phone.startsWith("962")
+            ? booking.phone
+            : "962" + booking.phone,
+          service: booking.service,
+          appointment: booking.appointment,
+          image: null,
+        };
+
+        try {
+          const res = await fetch(
+            "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
+            {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify(payload),
+            }
+          );
+
+          const data = await res.json();
+          console.log("📦 WhatsApp API response:", data);
+
+          if (data.success) {
+            await updateStatus(booking.id, "SentNoReply");
+            alert(`✅ تم إرسال التذكير بنجاح إلى ${booking.name}`);
+          } else {
+            alert(`⚠️ فشل إرسال التذكير: ${data.message || "خطأ غير معروف"}`);
+          }
+        } catch (err) {
+          console.error("❌ WhatsApp reminder error:", err);
+          alert("❌ خطأ أثناء إرسال التذكير: " + err.message);
+        } finally {
+          indicator.style.display = "none";
+          load();
+        }
+      }
+
+      // ✅ Render table
+      function renderTable(data) {
         const tb = q("#tbl tbody");
         tb.innerHTML = "";
 
-        d.forEach((b, idx) => {
+        data.forEach((b, idx) => {
           const r = document.createElement("tr");
           r.innerHTML = `
             <td>${b.name || "-"}</td>
@@ -223,6 +235,9 @@
             <td>
               <div style="display:flex;align-items:center;gap:5px;">
                 <span class="save-indicator" id="saved-${idx}">✔</span>
+                <span class="sending-indicator" id="sending-${idx}">
+                  جاري الإرسال... <span class="spinner"></span>
+                </span>
                 <select class="status-dropdown" data-index="${idx}" data-id="${
             b.id
           }">
@@ -250,6 +265,7 @@
             const index = e.target.dataset.index;
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
+            const booking = allData[index];
 
             allData[index].status = newStatus;
             await updateStatus(id, newStatus);
@@ -258,26 +274,17 @@
             indicator.style.display = "inline";
             setTimeout(() => (indicator.style.display = "none"), 1500);
 
+            // 🟣 Send reminder automatically if "SentNoReply"
+            if (newStatus === "SentNoReply") {
+              await sendWhatsAppReminder(booking, index);
+            }
+
             applyFilter();
           });
         });
       }
 
-      // ✅ SORTING FUNCTION
-      function sortTable(col) {
-        const tb = q("#tbl tbody");
-        const rows = Array.from(tb.rows);
-        rows.sort(
-          (a, b) =>
-            sortDirection *
-            a.cells[col].textContent.localeCompare(b.cells[col].textContent)
-        );
-        sortDirection *= -1;
-        tb.innerHTML = "";
-        rows.forEach((r) => tb.appendChild(r));
-      }
-
-      // ✅ FILTER BY STATUS
+      // ✅ Filter function
       function applyFilter() {
         const filterVal = q("#statusFilter").value;
         if (filterVal === "all") {
@@ -286,10 +293,9 @@
           renderTable(allData.filter((b) => b.status === filterVal));
         }
       }
-
       q("#statusFilter").addEventListener("change", applyFilter);
 
-      // ✅ THEME TOGGLE
+      // ✅ Theme toggle
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", function () {
         document.body.classList.toggle("dark");
@@ -304,7 +310,6 @@
           localStorage.setItem("clinic_theme", "light");
         }
       });
-
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
         const icon = themeToggle.querySelector("i");
@@ -312,16 +317,16 @@
         icon.classList.add("fa-sun");
       }
 
-      // ✅ SIDEBAR TOGGLE
+      // ✅ Sidebar toggle
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
       menuToggle.addEventListener("click", () => {
         sidebar.classList.toggle("active");
       });
 
-      // ✅ INITIAL LOAD
+      // ✅ Initial load
       load();
-      setInterval(load, 15000); // auto refresh every 15 seconds
+      setInterval(load, 15000);
     </script>
   </body>
 </html>
