--- a/analytics.html
+++ b/analytics.html
@@ -53,7 +53,7 @@
 
           <a href="offers.html">
             <i class="fa-solid fa-gift"></i>
-            إرسال العروض المخصصة
+            الحملات الاعلانية
           </a>
         </nav>
       </aside>
