--- a/notifications.html
+++ b/notifications.html
@@ -242,7 +242,7 @@
           </a>
           <a href="offers.html">
             <i class="fa-solid fa-gift"></i>
-            إرسال العروض المخصصة
+            الحملات الاعلانية
           </a>
         </nav>
       </aside>
