--- a/offers.html
+++ b/offers.html
@@ -182,7 +182,7 @@
             ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
           >
           <a href="offers.html" class="active"
-            ><i class="fa-solid fa-gift"></i> إرسال العروض المخصصة</a
+            ><i class="fa-solid fa-gift"></i>الحملات الاعلانية</a
           >
         </nav>
       </aside>
