--- a/AIsettings.html
+++ b/AIsettings.html
@@ -155,7 +155,7 @@
             ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
           >
           <a href="offers.html"
-            ><i class="fa-solid fa-gift"></i> إرسال العروض المخصصة</a
+            ><i class="fa-solid fa-gift"></i>الحملات الاعلانية</a
           >
         </nav>
       </aside>
